A compile must not inherit the last one's processor path
Holding the file manager across compiles carries every location a previous
compile set. javac sets ANNOTATION_PROCESSOR_PATH from -processorpath, so a
module declaring none inherited the last module's and silently ran its
processors, generating code into a build that never asked for any. It showed up
as an ordering-dependent test failure under the full suite, green in isolation.

The location cannot simply be cleared: setting it null leaves javac treating the
processor path as declared and empty, which stops it falling back to the compile
classpath for -proc:full discovery. So a held manager carrying a processor path
the next compile did not ask for is discarded instead -- one manager on the
transition between a module with processors and one without, nothing on a run of
either kind.